# mipt-2020-computer-graphics

./: README.md
task2/696Sverdlov/: CMakeLists.txt  KleinBottle.cpp
task2/696Sverdlov/696SverdlovData2/shaders/: klein.frag  klein.vert
task2/696Sverdlov/common/: Camera.cpp  Camera.hpp  Framebuffer.cpp  Framebuffer.hpp
